test/parse-checks/break-in-loop-3.good
break-in-loop-3.pebl:4: error: 'break' must be used in a loop
