test/parse-checks/break-in-loop-3.pebl
func foo():void {
  let a: int = 1;
  if a != 1 {
    break;
  }
}
